--- a/domain_pages/education.html
+++ b/domain_pages/education.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="../themify-icons.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/Domains.css">
+    <link type="text/css" rel="stylesheet" href="css/lightgallery.css" /> 
 
     <!--  -->
 
@@ -326,7 +327,7 @@
                         </div>
                         <div class="table">
                             <h4 class="card-caption">Project Ankuram</h4>
-                            <h6 id="info" style="height: auto;" class="text-gray">Adult education, distinct from child education, is a practice in which adults engage in systematic and sustained self-educating activities in order to gain new forms of knowledge, skills, attitudes, or values. By implementing adult literacy programmes, this project intends to improve an individual's quality of life and enable him or her to realise his or her potential for self-realisation and elevate their level of living. The curriculum includes courses such as Speaking English, Computer and Technology, Gender Awareness, and others.
+                            <p>Adult education, distinct from child education, is a practice in which adults engage in systematic and sustained self-educating activities in order to gain new forms of knowledge, skills, attitudes, or values. By implementing adult literacy programmes, this project intends to improve an individual's quality of life and enable him or her to realise his or her potential for self-realisation and elevate their level of living. The curriculum includes courses such as Speaking English, Computer and Technology, Gender Awareness, and others.
                         </div>
                         <div class="lightbox" id="lightbox">
                             <div class="row">
@@ -360,7 +361,7 @@
                         </div>
                         <div class="table">
                             <h4 class="card-caption">Pahari Pathshala</h4>
-                            <h6 id="info" style="height: auto;" class="text-gray">In this project, our main aim is to help students of Pahari village in Haryana. Volunteers teach Science & Maths to students of classes 11th - 12th for board examinations as well as competitive exams like JEE Mains & Advanced. Regular tests are also conducted at the end of each topic to check the understanding and learning of the students.</h6>
+                            <p>In this project, our main aim is to help students of Pahari village in Haryana. Volunteers teach Science & Maths to students of classes 11th - 12th for board examinations as well as competitive exams like JEE Mains & Advanced. Regular tests are also conducted at the end of each topic to check the understanding and learning of the students.</p>
                         </div>
                     </div>
                 </div>
@@ -375,7 +376,7 @@
                         </div>
                         <div class="table">
                             <h4 class="card-caption">Project Unnati</h4>
-                            <h6 id="info" style="height: auto;" class="text-gray">Unnati is an initiative which aims at providing quality education of the subjects Physics, Chemistry, and Mathematics to students of classes IX-X. We are currently in collaboration with Saraswati Seva Foundation, VIDYA NGO, as well as Edjustice NGO. We have already concluded a successful collaboration with the Udayan Care NGO as well, in which volunteers helped the students with their academics. We hope to continue helping our students enhance their knowledge, put them on the right path for their future and help them achieve new heights.</h6>
+                            <p>Unnati is an initiative which aims at providing quality education of the subjects Physics, Chemistry, and Mathematics to students of classes IX-X. We are currently in collaboration with Saraswati Seva Foundation, VIDYA NGO, as well as Edjustice NGO. We have already concluded a successful collaboration with the Udayan Care NGO as well, in which volunteers helped the students with their academics. We hope to continue helping our students enhance their knowledge, put them on the right path for their future and help them achieve new heights.</p>
                         </div>
                     </div>
                 </div>
@@ -390,7 +391,7 @@
                         </div>
                         <div class="table">
                             <h4 class="card-caption">Viaan</h4>
-                            <h6 id="info" style="height: auto;" class="text-gray">We aim to work towards the overall growth and development of underprivileged children. We try to inculcate moral education into these children as well as conduct extra-curricular activities for them. We are currently collaborating with Jan Sharnam NGO and Edjustice Foundation. We also regularly hold fun sessions with children of other NSS Teaching projects like VIDYA to bring together fun and learning through the means of storytelling, art and craft, music, drama and more!</h6>
+                            <p>We aim to work towards the overall growth and development of underprivileged children. We try to inculcate moral education into these children as well as conduct extra-curricular activities for them. We are currently collaborating with Jan Sharnam NGO and Edjustice Foundation. We also regularly hold fun sessions with children of other NSS Teaching projects like VIDYA to bring together fun and learning through the means of storytelling, art and craft, music, drama and more!</p>
                         </div>
                     </div>
                 </div>
@@ -405,7 +406,7 @@
                         </div>
                         <div class="table">
                             <h4 class="card-caption">SheCodes</h4>
-                            <h6 id="info" style="height: auto;" class="text-gray">In this Project we try to motivate girl students of 7th-8th class to take up the technology field and teach coding to those girls.and give them an idea about general coding and platforms like Scratch and Python. This project is being done in collaboration with the She Codes foundation and Delhi govt. This project combines the Education and Technology field and tries to bring it to the students.</h6>
+                            <p>In this Project we try to motivate girl students of 7th-8th class to take up the technology field and teach coding to those girls.and give them an idea about general coding and platforms like Scratch and Python. This project is being done in collaboration with the She Codes foundation and Delhi govt. This project combines the Education and Technology field and tries to bring it to the students.</p>
                         </div>
                     </div>
                 </div>
@@ -414,36 +415,49 @@
 
                     <div class="modal-content modal-body card card-profile w-60">
                         <span id="vidyaclose" class="close">&times;</span>
-                        <div class="row">
+                        <!-- <div class="row">
                             <div class="col-lg-4">
                               <img src="../images/vidya_logo.jpeg"
                                 data-mdb-img="../images/vidya_logo.jpeg" alt="Lightbox image 1"
                                 class="w-100 h-100" />
                             </div>
-                        </div>
+                        </div> -->
                         <div class="table">
-                            <h1 class="card-caption">VIDYA TEACHING PROJECT</h1>
-                            <h2>VISION</h2>
-                            <p>Our prime focus at VIDYA is to teach students from classes 4th to 12th (and even some college students and adults) and inculcate the fundamental concepts of all subjects, especially Mathematics and Science. We make assignments, host fun activities and take regular assessment exams all the while holding regular teaching 5-6 days a week. Through our efforts, we have hosted several extra-curricular activities and conducted classes for the students with impeccable regularity. We wish to bring about a change in the lives of our students by empowering them through quality education and overall development.</p>
-                            <h2>DESCRIPTION</h2>
-                            <p>VIDYA Teaching Project is a collaboration with VIDYA NGO where a team of dedicated volunteers takes regular classes, teaching students of classes 4-12 especially Science and Mathematics at Kendriya Vidyalaya School on the IIT Delhi Campus. Classes are held from 3-5 pm on weekdays for the students. We make assignments, host fun activities, and take regular assessment exams while holding regular teaching 6 days a week. </p>
-                        </div>
-                        <div class="lightbox h-25" id="lightbox">
+                            <!-- <h1 class="card-caption">VIDYA TEACHING PROJECT</h1> -->
                             <div class="row">
+                                <div class="col-lg-4"><h2>VISION</h2></div>
+                                <div class="col-lg-8"><p>Our prime focus at VIDYA is to teach students from classes 4th to 12th (and even some college students and adults) and inculcate the fundamental concepts of all subjects, especially Mathematics and Science. We make assignments, host fun activities and take regular assessment exams all the while holding regular teaching 5-6 days a week. Through our efforts, we have hosted several extra-curricular activities and conducted classes for the students with impeccable regularity. We wish to bring about a change in the lives of our students by empowering them through quality education and overall development.</p></div>
+                            </div>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <div class="row">
+                                <div class="col-lg-8"> <p>VIDYA Teaching Project is a collaboration with VIDYA NGO where a team of dedicated volunteers takes regular classes, teaching students of classes 4-12 especially Science and Mathematics at Kendriya Vidyalaya School on the IIT Delhi Campus. Classes are held from 3-5 pm on weekdays for the students. We make assignments, host fun activities, and take regular assessment exams while holding regular teaching 6 days a week. </p></div>
+                                <div class="col-lg-4"><h2>DESCRIPTION</h2></div>
+                            </div>
+                        </div>
+                        <br>
+                            <br>
+                            <br>
+                            <br>
+                        <div class="lightbox h-25" id="lightbox">
+                            <div class="row" id="lightgallery">
                               <div class="col-lg-4">
-                                <img src="../images/vidya1.png"
-                                  data-mdb-img="../images/vidya1.png" alt="Lightbox image 1"
-                                  class="w-100 h-100" />
+                                <a href="../images/vidya1.png" data-lightbox="vidya" ><img src="../images/vidya1.png"
+                                    data-mdb-img="../images/vidya1.png" alt="Lightbox image 1"
+                                    class="w-100 h-100" /></a>
+                                
                               </div>
                               <div class="col-lg-4">
-                                <img src="../images/vidya2.png"
-                                  data-mdb-img="../images/vidya2.png" alt="Lightbox image 2"
-                                  class="w-100 h-100" />
+                                <a href="../images/vidya2.png" data-lightbox="vidya"><img src="../images/vidya2.png"
+                                    data-mdb-img="../images/vidya2.png" alt="Lightbox image 1"
+                                    class="w-100 h-100" /></a>
                               </div>
                               <div class="col-lg-4">
-                                <img src="../images/vidya3.png"
-                                  data-mdb-img="../images/vidya3.png" alt="Lightbox image 3"
-                                  class="w-100 h-100" />
+                                <a href="../images/vidya3.png" data-lightbox="vidya"><img src="../images/vidya3.png"
+                                    data-mdb-img="../images/vidya3.png" alt="Lightbox image 1"
+                                    class="w-100 h-100" /></a>
                               </div>
                               
                             </div>
@@ -461,8 +475,8 @@
                         </div>
                         <div class="table">
                             <h4 class="card-caption">Aarohan</h4>
-                            <h6 id="info" style="height: auto;" class="text-gray">Aarohan aims to provide free and quality education to the students of class 11th and 12th to help them prepare for examinations like JEE Mains & Advanced. We primarily focus on economically weaker sections of society. The competition to get into IITs and NITs has increased a lot, and it has become challenging to crack these exams without coaching and the proper guidance. We are currently in collaboration with NGOs like Saraswati Sewa Foundation (SSF), Edjustice, and VIDYA, who help us reach out to our beneficiaries.
-                            </h6>
+                            <p>Aarohan aims to provide free and quality education to the students of class 11th and 12th to help them prepare for examinations like JEE Mains & Advanced. We primarily focus on economically weaker sections of society. The competition to get into IITs and NITs has increased a lot, and it has become challenging to crack these exams without coaching and the proper guidance. We are currently in collaboration with NGOs like Saraswati Sewa Foundation (SSF), Edjustice, and VIDYA, who help us reach out to our beneficiaries.
+                            </p>
                         </div>
                     </div>
 
@@ -479,7 +493,7 @@
                         <div class="table">
                             <h4 class="card-caption">NAB RK Puram</h4>
                             <h5 class="category text-gray">Team Mentor</h5>
-                            <h6 id="info" style="height: auto;" class="text-gray">As truly said, "Hope is being able to see that there is light despite all the darkness. " Believing in the same, this project works for the upliftment of the visually impaired kids from NAB RK Puram. There is a well-known saying that, a teacher can change life with just the right mix of chalk and challenges. Our main focus here is to educate them so that they can stand on their own feet. We teach them different subjects like Science, Maths, English, Computer, etc. through one-on-one classes with the volunteers. We also try to help prepare their schedule of academic syllabus and provide mentoring for future opportunities. Also, providing scribes for various exams of visually impaired people is a very important part of this project.</h6>
+                            <p>As truly said, "Hope is being able to see that there is light despite all the darkness. " Believing in the same, this project works for the upliftment of the visually impaired kids from NAB RK Puram. There is a well-known saying that, a teacher can change life with just the right mix of chalk and challenges. Our main focus here is to educate them so that they can stand on their own feet. We teach them different subjects like Science, Maths, English, Computer, etc. through one-on-one classes with the volunteers. We also try to help prepare their schedule of academic syllabus and provide mentoring for future opportunities. Also, providing scribes for various exams of visually impaired people is a very important part of this project.</p>
                         </div>
                     </div>
                 </div>
@@ -924,12 +938,19 @@
     <script type='text/javascript' src="../js/libs.min.js"></script>
     <script type='text/javascript' src="../js/nssiitd.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js" integrity="sha512-Y2IiVZeaBwXG1wSV7f13plqlmFOx8MdjuHyYFVoYzhyRr3nH/NMDjTBSswijzADdNzMyWNetbLMfOpIPl6Cv9g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="js/lightgallery.min.js"></script>
+
+    <!-- lightgallery plugins -->
+    <script src="js/lg-thumbnail.min.js"></script>
+    <script src="js/lg-fullscreen.min.js"></script>
     <!-- Angular Material requires Angular.js Libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.6/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.6/angular-animate.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.6/angular-aria.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.6/angular-messages.min.js"></script>
-
+    <script type="text/javascript">
+        lightGallery(document.getElementById('lightgallery')); 
+    </script>
     <!-- Angular Material Library -->
     <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.12/angular-material.min.js"></script>
 </body>
