complete html of environment, innovation, society

--- a/domain_pages/environment.html
+++ b/domain_pages/environment.html
@@ -229,7 +229,7 @@
                                 <img class="img" src="images/ankuram.jpeg"> </a>
                             </div>
                             <div class="table">
-                                <h4 class="card-caption">Project Ankuram</h4>
+                                <h4 class="card-caption">**yet to update**</h4>
                                 <div class="ftr"><button id='ankuramBtn' class="btn btn-primary">Know More</button>
                                 </div>
                             </div>
@@ -462,7 +462,7 @@
                     <section class="section2" id="section2">
                         <div class="modal-content modal-body card card-profile" style="background: #f4f6fa;">
                             <span id="climateclose" class="close">&times;</span>
-                            <h1 id="about">climate Pathshala</h1>
+                            <h1 id="about">Climate Crusade</h1>
                             <hr style="width: 75%; margin-left: 12.5%;">
                             <div class="row">
                                 <h3 class="head" id="about_head" style="font-family: 'Varela Round', sans-serif;">
