fixing in carousel

--- a/domain_pages/society.html
+++ b/domain_pages/society.html
@@ -267,7 +267,8 @@
                             </div>
                             <div class="table">
                                 <h4 class="card-caption">Know Your Rights</h4>
-                                <div class="ftr"><button id='knowYourRightsBtn' class="btn btn-primary">Know More</button>
+                                <div class="ftr"><button id='knowYourRightsBtn' class="btn btn-primary">Know
+                                        More</button>
                                 </div>
                             </div>
                         </div>
@@ -414,15 +415,15 @@
                                 </div>
                             </div>
                             <div style="width: 70%; margin : 3% 15%">
-                                <div id="carouselExampleIndicators" class="carousel slide h-28 w-100"
+                                <div id="carouselExampleIndicators1" class="carousel slide h-28 w-100"
                                     data-bs-ride="true" width>
                                     <div class="carousel-indicators">
-                                        <button type="button" data-bs-target="#carouselExampleIndicators"
+                                        <button type="button" data-bs-target="#carouselExampleIndicators1"
                                             data-bs-slide-to="0" class="active" aria-current="true"
                                             aria-label="Slide 1"></button>
-                                        <button type="button" data-bs-target="#carouselExampleIndicators"
+                                        <button type="button" data-bs-target="#carouselExampleIndicators1"
                                             data-bs-slide-to="1" aria-label="Slide 2"></button>
-                                        <button type="button" data-bs-target="#carouselExampleIndicators"
+                                        <button type="button" data-bs-target="#carouselExampleIndicators1"
                                             data-bs-slide-to="2" aria-label="Slide 3"></button>
                                     </div>
                                     <div class="carousel-inner">
@@ -437,12 +438,12 @@
                                         </div>
                                     </div>
                                     <button class="carousel-control-prev" type="button"
-                                        data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                        data-bs-target="#carouselExampleIndicators1" data-bs-slide="prev">
                                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                         <span class="visually-hidden">Previous</span>
                                     </button>
                                     <button class="carousel-control-next" type="button"
-                                        data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                        data-bs-target="#carouselExampleIndicators1" data-bs-slide="next">
                                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                         <span class="visually-hidden">Next</span>
                                     </button>
@@ -501,15 +502,15 @@
                                 </div>
                             </div>
                             <div style="width: 70%; margin : 3% 15%">
-                                <div id="carouselExampleIndicators" class="carousel slide h-28 w-100"
+                                <div id="carouselExampleIndicators2" class="carousel slide h-28 w-100"
                                     data-bs-ride="true" width>
                                     <div class="carousel-indicators">
-                                        <button type="button" data-bs-target="#carouselExampleIndicators"
+                                        <button type="button" data-bs-target="#carouselExampleIndicators2"
                                             data-bs-slide-to="0" class="active" aria-current="true"
                                             aria-label="Slide 1"></button>
-                                        <button type="button" data-bs-target="#carouselExampleIndicators"
+                                        <button type="button" data-bs-target="#carouselExampleIndicators2"
                                             data-bs-slide-to="1" aria-label="Slide 2"></button>
-                                        <button type="button" data-bs-target="#carouselExampleIndicators"
+                                        <button type="button" data-bs-target="#carouselExampleIndicators2"
                                             data-bs-slide-to="2" aria-label="Slide 3"></button>
                                     </div>
                                     <div class="carousel-inner">
@@ -524,12 +525,12 @@
                                         </div>
                                     </div>
                                     <button class="carousel-control-prev" type="button"
-                                        data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                        data-bs-target="#carouselExampleIndicators2" data-bs-slide="prev">
                                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                         <span class="visually-hidden">Previous</span>
                                     </button>
                                     <button class="carousel-control-next" type="button"
-                                        data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                        data-bs-target="#carouselExampleIndicators2" data-bs-slide="next">
                                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                         <span class="visually-hidden">Next</span>
                                     </button>
@@ -551,7 +552,8 @@
                                 <div class="col-md-6 col-sm-12">
 
                                     <p id="whatText">
-                                        The vision of this project and find the policies which are applicable for them so their living conditions can improve.
+                                        The vision of this project and find the policies which are applicable for them
+                                        so their living conditions can improve.
                                     </p>
                                 </div>
                                 <div class="col-md-6 col-sm-12" style="text-align:center">
@@ -569,20 +571,24 @@
                                 <div class="col-md-6 col-sm-12">
 
                                     <p id="whatText">
-                                        We go to the slums near IIT Delhi and spread awareness regarding the government policies amongst underprivileged people through pamphlets, brochures and visits to slums. We also help people to fill the applications for several policies and admissions in various private schools. We are planning on organising awareness camps in the slums and also for the workers on campus as well.
+                                        We go to the slums near IIT Delhi and spread awareness regarding the government
+                                        policies amongst underprivileged people through pamphlets, brochures and visits
+                                        to slums. We also help people to fill the applications for several policies and
+                                        admissions in various private schools. We are planning on organising awareness
+                                        camps in the slums and also for the workers on campus as well.
                                     </p>
                                 </div>
                             </div>
                             <div style="width: 70%; margin : 3% 15%">
-                                <div id="carouselExampleIndicators" class="carousel slide h-28 w-100"
+                                <div id="carouselExampleIndicators3" class="carousel slide h-28 w-100"
                                     data-bs-ride="true" width>
                                     <div class="carousel-indicators">
-                                        <button type="button" data-bs-target="#carouselExampleIndicators"
+                                        <button type="button" data-bs-target="#carouselExampleIndicators3"
                                             data-bs-slide-to="0" class="active" aria-current="true"
                                             aria-label="Slide 1"></button>
-                                        <button type="button" data-bs-target="#carouselExampleIndicators"
+                                        <button type="button" data-bs-target="#carouselExampleIndicators3"
                                             data-bs-slide-to="1" aria-label="Slide 2"></button>
-                                        <button type="button" data-bs-target="#carouselExampleIndicators"
+                                        <button type="button" data-bs-target="#carouselExampleIndicators3"
                                             data-bs-slide-to="2" aria-label="Slide 3"></button>
                                     </div>
                                     <div class="carousel-inner">
@@ -597,12 +603,12 @@
                                         </div>
                                     </div>
                                     <button class="carousel-control-prev" type="button"
-                                        data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                        data-bs-target="#carouselExampleIndicators3" data-bs-slide="prev">
                                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                         <span class="visually-hidden">Previous</span>
                                     </button>
                                     <button class="carousel-control-next" type="button"
-                                        data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                        data-bs-target="#carouselExampleIndicators3" data-bs-slide="next">
                                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                         <span class="visually-hidden">Next</span>
                                     </button>
@@ -655,15 +661,15 @@
                                 </div>
                             </div>
                             <div style="width: 70%; margin : 3% 15%">
-                                <div id="carouselExampleIndicators" class="carousel slide h-28 w-100"
+                                <div id="carouselExampleIndicators4" class="carousel slide h-28 w-100"
                                     data-bs-ride="true" width>
                                     <div class="carousel-indicators">
-                                        <button type="button" data-bs-target="#carouselExampleIndicators"
+                                        <button type="button" data-bs-target="#carouselExampleIndicators4"
                                             data-bs-slide-to="0" class="active" aria-current="true"
                                             aria-label="Slide 1"></button>
-                                        <button type="button" data-bs-target="#carouselExampleIndicators"
+                                        <button type="button" data-bs-target="#carouselExampleIndicators4"
                                             data-bs-slide-to="1" aria-label="Slide 2"></button>
-                                        <button type="button" data-bs-target="#carouselExampleIndicators"
+                                        <button type="button" data-bs-target="#carouselExampleIndicators4"
                                             data-bs-slide-to="2" aria-label="Slide 3"></button>
                                     </div>
                                     <div class="carousel-inner">
@@ -678,12 +684,12 @@
                                         </div>
                                     </div>
                                     <button class="carousel-control-prev" type="button"
-                                        data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                        data-bs-target="#carouselExampleIndicators4" data-bs-slide="prev">
                                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                         <span class="visually-hidden">Previous</span>
                                     </button>
                                     <button class="carousel-control-next" type="button"
-                                        data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                        data-bs-target="#carouselExampleIndicators4" data-bs-slide="next">
                                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                         <span class="visually-hidden">Next</span>
                                     </button>
