--- a/domain_pages/environment.html
+++ b/domain_pages/environment.html
@@ -253,7 +253,7 @@
                                 <img class="img" src="images/animalCare.jpg"> </a>
                             </div>
                             <div class="table">
-                                <h4 class="card-caption">ANIMAL CARE</h4>
+                                <h4 class="card-caption">Animal Care</h4>
                                 <div class="ftr"><button id='animalCareBtn' class="btn btn-primary">Know More</button></div>
                             </div>
                         </div>
@@ -304,6 +304,71 @@
                         </div>
                     </div>
                 </div>
+                <!-- <div id="scienceSeedsModal" class="modal">
+                    <section class="section2" id="section2">
+                        <div class="modal-content modal-body card card-profile" style="background: #f4f6fa;">
+                            <span id="scienceSeedsclose" class="close">&times;</span>
+                            <h1 id="about">Science Seeds</h1>
+                            <hr style="width: 75%; margin-left: 12.5%;">
+                            <div class="row">
+                                <h3 class="head" id="about_head" style="font-family: 'Varela Round', sans-serif;">
+                                    VISION </h3>
+                                <div class="col-md-6 col-sm-12">
+
+                                    <p id="whatText">
+                                        The vision of this project is to cultivate the seed of science among the young brains of our country, for this we conduct sessions with the students to impart practical knowledge by demonstration of  various experiments.
+                                    </p>
+                                </div>
+                                <div class="col-md-6 col-sm-12" style="text-align:center">
+                                    <img src="images/logo.png" id="aboutTeam1">
+                                </div>
+                            </div>
+                            <hr style="width: 75%; margin-left: 12.5%;">
+                            <div class="row">
+                                <h3 class="head" id="about_head" style="font-family: 'Varela Round', sans-serif;">
+                                    DESCRIPTION</h3>
+                                <div class="col-md-6 col-sm-12">
+                                    <img src="images/About Team.JPG" id="aboutTeam">
+                                </div>
+
+                                <div class="col-md-6 col-sm-12">
+
+                                    <p id="whatText">
+                                        IIT Delhi students visit nearby slums on weekends to show children science activities and spark their curiosity. We asked volunteers to film videos explaining science experiments and DIY projects to better comprehend the topics. In partnership with SSF, we conducted live sessions of volunteers and students describing the science experiment. We held a countrywide virtual scientific model making competition, 'Ingenious Geeks,' for high school students in grades 8-12. They were invited to tackle some of society's most notable problems by proposing a solution and making a model based on it. We plan to go on field trips to nearby villages and demonstrate some DIY experiments. We also hope to host some activities on campus to explore their innovative abilities, and hold Ingenious Geeks 2.0 for high school and university students.
+                                    </p>
+                                </div>
+                            </div>
+                            <div style="width: 70%; margin : 3% 15%">
+                            <div id="carouselExampleIndicators" class="carousel slide h-28 w-100" data-bs-ride="true" width>
+                                <div class="carousel-indicators">
+                                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                </div>
+                                <div class="carousel-inner">
+                                  <div class="carousel-item active">
+                                    <img src="../images/vidya1.png" class="d-block w-100" alt="...">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img src="../images/vidya2.png" class="d-block w-100" alt="...">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img src="../images/vidya3.png" class="d-block w-100" alt="...">
+                                  </div>
+                                </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                  <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                  <span class="visually-hidden">Next</span>
+                                </button>
+                            </div>
+                        </div>
+                        </div>
+                    </section>
+                </div> -->
 
                 <div id="EnovateModal" class="modal">
                     <section class="section2" id="section2">
@@ -346,15 +411,15 @@
                                 </div>
                             </div>
                             <div style="width: 70%; margin : 3% 15%">
-                                <div id="carouselExampleIndicators" class="carousel slide h-28 w-100"
+                                <div id="carouselExampleIndicators1" class="carousel slide h-28 w-100"
                                     data-bs-ride="true" width>
                                     <div class="carousel-indicators">
-                                        <button type="button" data-bs-target="#carouselExampleIndicators"
+                                        <button type="button" data-bs-target="#carouselExampleIndicators1"
                                             data-bs-slide-to="0" class="active" aria-current="true"
                                             aria-label="Slide 1"></button>
-                                        <button type="button" data-bs-target="#carouselExampleIndicators"
+                                        <button type="button" data-bs-target="#carouselExampleIndicators1"
                                             data-bs-slide-to="1" aria-label="Slide 2"></button>
-                                        <button type="button" data-bs-target="#carouselExampleIndicators"
+                                        <button type="button" data-bs-target="#carouselExampleIndicators1"
                                             data-bs-slide-to="2" aria-label="Slide 3"></button>
                                     </div>
                                     <div class="carousel-inner">
@@ -369,12 +434,12 @@
                                         </div>
                                     </div>
                                     <button class="carousel-control-prev" type="button"
-                                        data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                        data-bs-target="#carouselExampleIndicators1" data-bs-slide="prev">
                                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                         <span class="visually-hidden">Previous</span>
                                     </button>
                                     <button class="carousel-control-next" type="button"
-                                        data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                        data-bs-target="#carouselExampleIndicators1" data-bs-slide="next">
                                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                         <span class="visually-hidden">Next</span>
                                     </button>
@@ -388,7 +453,7 @@
                     <section class="section2" id="section2">
                         <div class="modal-content modal-body card card-profile" style="background: #f4f6fa;">
                             <span id="animalCareclose" class="close">&times;</span>
-                            <h1 id="about">ANIMAL CARE PROJECT</h1>
+                            <h1 id="about">Animal Care Project</h1>
                             <hr style="width: 75%; margin-left: 12.5%;">
                             <div class="row">
                                 <h3 class="head" id="about_head" style="font-family: 'Varela Round', sans-serif;">
@@ -420,15 +485,15 @@
                                 </div>
                             </div>
                             <div style="width: 70%; margin : 3% 15%">
-                                <div id="carouselExampleIndicators" class="carousel slide h-28 w-100"
+                                <div id="carouselExampleIndicators2" class="carousel slide h-28 w-100"
                                     data-bs-ride="true" width>
                                     <div class="carousel-indicators">
-                                        <button type="button" data-bs-target="#carouselExampleIndicators"
+                                        <button type="button" data-bs-target="#carouselExampleIndicators2"
                                             data-bs-slide-to="0" class="active" aria-current="true"
                                             aria-label="Slide 1"></button>
-                                        <button type="button" data-bs-target="#carouselExampleIndicators"
+                                        <button type="button" data-bs-target="#carouselExampleIndicators2"
                                             data-bs-slide-to="1" aria-label="Slide 2"></button>
-                                        <button type="button" data-bs-target="#carouselExampleIndicators"
+                                        <button type="button" data-bs-target="#carouselExampleIndicators2"
                                             data-bs-slide-to="2" aria-label="Slide 3"></button>
                                     </div>
                                     <div class="carousel-inner">
@@ -443,12 +508,12 @@
                                         </div>
                                     </div>
                                     <button class="carousel-control-prev" type="button"
-                                        data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                        data-bs-target="#carouselExampleIndicators2" data-bs-slide="prev">
                                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                         <span class="visually-hidden">Previous</span>
                                     </button>
                                     <button class="carousel-control-next" type="button"
-                                        data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                        data-bs-target="#carouselExampleIndicators2" data-bs-slide="next">
                                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                         <span class="visually-hidden">Next</span>
                                     </button>
@@ -493,11 +558,11 @@
                                 </div>
                             </div>
                             <div style="width: 70%; margin : 3% 15%">
-                            <div id="carouselExampleIndicators" class="carousel slide h-28 w-100" data-bs-ride="true" width>
+                            <div id="carouselExampleIndicators3" class="carousel slide h-28 w-100" data-bs-ride="true" width>
                                 <div class="carousel-indicators">
-                                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                  <button type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                  <button type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                  <button type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide-to="2" aria-label="Slide 3"></button>
                                 </div>
                                 <div class="carousel-inner">
                                   <div class="carousel-item active">
@@ -510,11 +575,11 @@
                                     <img src="../images/vidya3.png" class="d-block w-100" alt="...">
                                   </div>
                                 </div>
-                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide="prev">
                                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                   <span class="visually-hidden">Previous</span>
                                 </button>
-                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide="next">
                                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                   <span class="visually-hidden">Next</span>
                                 </button>
@@ -559,11 +624,11 @@
                                 </div>
                             </div>
                             <div style="width: 70%; margin : 3% 15%">
-                            <div id="carouselExampleIndicators" class="carousel slide h-28 w-100" data-bs-ride="true" width>
+                            <div id="carouselExampleIndicators4" class="carousel slide h-28 w-100" data-bs-ride="true" width>
                                 <div class="carousel-indicators">
-                                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                  <button type="button" data-bs-target="#carouselExampleIndicators4" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                  <button type="button" data-bs-target="#carouselExampleIndicators4" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                  <button type="button" data-bs-target="#carouselExampleIndicators4" data-bs-slide-to="2" aria-label="Slide 3"></button>
                                 </div>
                                 <div class="carousel-inner">
                                   <div class="carousel-item active">
@@ -576,11 +641,11 @@
                                     <img src="../images/vidya3.png" class="d-block w-100" alt="...">
                                   </div>
                                 </div>
-                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators4" data-bs-slide="prev">
                                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                   <span class="visually-hidden">Previous</span>
                                 </button>
-                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators4" data-bs-slide="next">
                                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                   <span class="visually-hidden">Next</span>
                                 </button>
